<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >


    <EditText
        android:id="@+id/enombre"
        android:layout_width="0dp"
        android:layout_height="42dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/Nombre"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/econtra"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/econtra"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/pass"
        android:inputType="textPassword"
        app:layout_constraintBottom_toTopOf="@+id/erepcontra"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/enombre" />

    <EditText
        android:id="@+id/erepcontra"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="2dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/repass"
        android:inputType="textPassword"
        app:layout_constraintBottom_toTopOf="@+id/ecorreo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/econtra" />

    <Button
        android:id="@+id/bguardar"
        android:layout_width="wrap_content"
        android:layout_height="49dp"
        android:layout_marginEnd="136dp"
        android:layout_marginStart="11dp"
        android:layout_marginTop="6dp"
        android:text="@string/guardar"
        android:textAllCaps="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/chleer"
        app:layout_constraintTop_toBottomOf="@+id/chps4" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="6dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:onClick="radioButtonClicker"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/scrollView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/slugarn">

        <RadioButton
            android:id="@+id/rbhombre"
            android:layout_width="117dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:checked="true"
            android:text="@string/mascu"
            tools:layout_editor_absoluteX="103dp"
            tools:layout_editor_absoluteY="374dp" />

        <RadioButton
            android:id="@+id/rbmujer"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/feme"
            tools:layout_editor_absoluteX="59dp"
            tools:layout_editor_absoluteY="414dp" />
    </RadioGroup>

    <CheckBox
        android:id="@+id/chdormir"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dormir"
        app:layout_constraintEnd_toStartOf="@+id/chleer"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/chcine" />

    <CheckBox
        android:id="@+id/chcine"
        android:layout_width="66dp"
        android:layout_height="28dp"
        android:layout_marginEnd="9dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="2dp"
        android:text="@string/cine"
        app:layout_constraintBottom_toTopOf="@+id/chdormir"
        app:layout_constraintEnd_toStartOf="@+id/chps4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup" />

    <CheckBox
        android:id="@+id/chleer"
        android:layout_width="wrap_content"
        android:layout_height="32dp"
        android:layout_marginEnd="3dp"
        android:layout_marginTop="1dp"
        android:text="@string/leer"
        app:layout_constraintEnd_toStartOf="@+id/bguardar"
        app:layout_constraintStart_toEndOf="@+id/chdormir"
        app:layout_constraintTop_toBottomOf="@+id/chps4" />

    <CheckBox
        android:id="@+id/chps4"
        android:layout_width="88dp"
        android:layout_height="28dp"
        android:layout_marginEnd="78dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="12dp"
        android:text="@string/ps4"
        app:layout_constraintEnd_toStartOf="@+id/scrollView2"
        app:layout_constraintStart_toEndOf="@+id/chcine"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup" />

    <EditText
        android:id="@+id/ecorreo"
        android:layout_width="0dp"
        android:layout_height="44dp"
        android:layout_marginBottom="1dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="4dp"
        android:ems="10"
        android:hint="@string/correo"
        android:inputType="textEmailAddress"
        app:layout_constraintBottom_toTopOf="@+id/efechan"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/erepcontra" />

    <TextView
        android:id="@+id/efechan"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:ems="10"
        android:hint="@string/nacimiento"
        android:onClick="showDatePickerDialog"
        app:layout_constraintBottom_toTopOf="@+id/slugarn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ecorreo" />

    <Spinner
        android:id="@+id/slugarn"
        android:layout_width="0dp"
        android:layout_height="32dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:autofillHints="@string/lugarn"
        app:layout_constraintBottom_toTopOf="@+id/radioGroup"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/efechan" />

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="132dp"
        android:layout_height="163dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:orientation="vertical"
        android:scrollbars="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/bguardar"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup">


        <TextView
            android:id="@+id/tdatos"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </ScrollView>


</android.support.constraint.ConstraintLayout>